
Changelog for 8.2.0

Collector:

DB:
    - configuration templates
    - evidence filters can now be saved for future reuse